# cpp-raspberry-pi-camera-ai

./: .gitignore
cpp-camera-server/: .clangd  README.md
cpp-camera-server/src/: CMakeLists.txt  CircularFrameBuffer.cppm  MappedBuffer.cppm  SimpleCam.cppm  ThreadPool.cppm  main.cpp  server.cppm
hailo-object-detection/: .clang-format  CMakeLists.txt  MappedBuffer.hpp  SimpleCam.hpp  ThreadPool.hpp  build.sh  detection_inference.cpp  detection_inference.hpp  main.cpp  server.cpp  server.hpp
